Installed @types/node-cron
